cmake_minimum_required(VERSION 2.8)
project(templates)

set(CMAKE_CXX_STANDARD 14)
# set(CMAKE_C_COMPILER "/usr/bin/gcc")
# set(CMAKE_C_COMPILER "/opt/rh/devtoolset-8/root/usr/bin/gcc")
# set(CMAKE_CXX_COMPILER "/usr/bin/g++")
# set(CMAKE_CXX_COMPILER "/opt/rh/devtoolset-8/root/usr/bin/g++")

add_executable(templates segment_tree_3.cpp)
